# spices

./: CMakeLists.txt
include/: spices_core.h
src/: spices_core.c  spices_core_memdefs.h  typedefs.h
tests/: vector_test.c
